<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SortActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <EditText
            android:id="@+id/et_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/sort_hint"
            android:singleLine="true"
            android:text="@string/sort_example"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sort_sure"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#2C3C9A"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_marginTop="@dimen/dp_10"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>